# foundryvtt-docker-switcher

./: .dockerignore  .editorconfig  .env.sample  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: build.yml
src/foundryvtt_docker_switcher/: __main__.py  bot.py  config.py  docker.py  foundry.py
